--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,7 +67,7 @@
 
 @layer base {
   .dark {
-    --background: 0 0% 100%;
+    --background: 100 100% 100%;
     --foreground: 240 10% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
@@ -194,24 +194,24 @@ img {
 }
 
 .btn-primary:hover {
-  background-color: #7c3aed;
+  background-color: #f2eaff;
   color: #fff;
   transform: scale(1.05) translateY(-4px);
   box-shadow: inset 0 0 rgba(255, 255, 255, 0.24),
-    0 1px 3px rgba(124, 58, 237, 0.24),
-    0 2px 6px rgba(124, 58, 237, 0.24),
+    0 1px 3px rgba(122, 22, 80, 0.24),
+    0 2px 6px rgba(234, 58, 237, 0.24),
     0 4px 8px rgba(124, 58, 237, 0.12),
-    0 20px 40px -8px rgba(124, 58, 237, 0.64);
+    0 20px 40px -8px rgba(96, 19, 57, 0.64);
 }
 
 .btn-primary:active {
-  background-color: #7c3aed;
+  background-color: #ffffff;
   transform: scale(1) translate(0);
   box-shadow: inset 0 0 rgba(255, 255, 255, 0.24),
-    0 1px 3px rgba(124, 58, 237, 0.48),
-    0 2px 6px rgba(124, 58, 237, 0.48),
-    0 4px 8px rgba(124, 58, 237, 0.48),
-    0 4px 12px -8px rgba(124, 58, 237, 1);
+    0 1px 3px rgba(242, 235, 255, 0.48),
+    0 2px 6px rgba(245, 239, 255, 0.48),
+    0 4px 8px rgba(255, 255, 255, 0.48),
+    0 4px 12px -8px rgb(223, 205, 255);
 }
 
 .btn-secondary {
@@ -354,5 +354,5 @@ img {
 }
 
 .gradient {
-  background: conic-gradient(from 230.29deg at 51.63% 52.16%, rgb(36, 0, 255) 0deg, rgb(0, 135, 255) 67.5deg, rgb(108, 39, 157) 198.75deg, rgb(24, 38, 163) 251.25deg, rgb(54, 103, 196) 301.88deg, rgb(105, 30, 255) 360deg);
+  background: conic-gradient(from 230.29deg at 51.63% 52.16%, rgb(161, 161, 161) 0deg, rgb(0, 135, 255) 67.5deg, rgb(108, 39, 157) 198.75deg, rgb(24, 38, 163) 251.25deg, rgb(54, 103, 196) 301.88deg, rgb(105, 30, 255) 360deg);
 }
